--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <section class="link link_c">
+        <!-- <section class="link link_c">
             <p>portfolio</p>
         </section>
 
@@ -44,7 +44,7 @@
 
         <section class="link link_e">
             <p>spel</p>
-        </section>
+        </section> -->
 
     </main>
     <footer>2021</footer>
