--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                 <a href="https://github.com/Qpheliax/apiimages/tree/master" target="_blank"><img class="img"
                         src="assets/git.png" alt="github page" /></a>
             </div>
+            <div class="icons">
+                <a href="http://Qpheliax.github.io/youtubeapi" target="_blank"><img class="img" src="assets/home.svg"
+                        alt="homepage" /></a>
+                <a href="https://github.com/Qpheliax/youtubeapi/tree/master" target="_blank"><img class="img"
+                        src="assets/git.png" alt="github page" /></a>
+            </div>
         </section>
 
         <section class="link link_b">
