--- a/index.html
+++ b/index.html
@@ -46,11 +46,17 @@
 
         <section class="link link_d">
             <p>butik</p>
-        </section>
+        </section> -->
 
         <section class="link link_e">
-            <p>spel</p>
-        </section> -->
+            <p>lärandemedel</p>
+            <div class="icons">
+                <a href="https://qpheliax.github.io/figures/" target="_blank"><img class="img" src="assets/home.svg"
+                        alt="homepage" /></a>
+                <a href="https://github.com/Qpheliax/figures/tree/master" target="_blank"><img class="img"
+                        src="assets/git.png" alt="github page" /></a>
+            </div>
+        </section>
 
     </main>
     <footer>2021</footer>
